--- a/resume/index.html
+++ b/resume/index.html
@@ -8,3 +8,5 @@ or email me at <a class="u-email" href="mailto:{{ site.email }}">{{ site.email }
 </p>
 {% assign resume = site.static_files | where: "name", "resume" %}
 <object class="resume" data="/assets/pdf/resume.pdf" type='application/pdf'/>
+
+If your browser does not support displaying pdfs in line, you can open my resume <a href="/assets/pdf/resume.pdf" target="blank">here</a>
