spell checks and html validation

--- a/resume/index.html
+++ b/resume/index.html
@@ -7,6 +7,6 @@ To request an updated copy, please DM me on Twitter <a href="https://www.twitter
 or email me at <a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a>.
 </p>
 {% assign resume = site.static_files | where: "name", "resume" %}
-<object class="resume" data="/assets/pdf/resume.pdf" type='application/pdf'/>
+<object class="resume" data="/assets/pdf/resume.pdf" type="application/pdf"/>
 
-If your browser does not support displaying pdfs in line, you can open my resume <a href="/assets/pdf/resume.pdf" target="blank">here</a>
+If your browser does not support displaying PDFs in line, you can open my resume <a href="/assets/pdf/resume.pdf" target="blank">here</a>
