--- a/resume/index.html
+++ b/resume/index.html
@@ -2,11 +2,11 @@
 layout: static-page
 ---
 <p>
-This resume was last updated on 4/27/2018. 
+This resume was last updated on 8/2/2018. 
 To request an updated copy, please DM me on Twitter <a href="https://www.twitter.com/hofmadresu" target="_blank" rel="noopener">@hofmadresu</a> 
 or email me at <a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a>.
 </p>
 {% assign resume = site.static_files | where: "name", "resume" %}
 <object class="resume" data="/assets/pdf/resume.pdf" type="application/pdf"/>
 
-If your browser does not support displaying PDFs in line, you can open my resume <a href="/assets/pdf/resume.pdf" target="blank">here</a>
+If your browser does not support displaying PDFs in-line, you can open my resume <a href="/assets/pdf/resume.pdf" target="blank">here</a>
